# kiss-icp

./: Dockerfile  ros1_publisher.py
kiss-icp/: Plot_odom.ipynb  ros2_accumulate_cloud_publish.py  ros2_accumulate_kissFrame.py  ros2_accumulate_pointclouds.py  ros2_accumulate_pointclouds_InGlobal.py  ros2_accumulate_pointclouds_split_InLocal.py  ros2_loop_closure.py  ros2_odom_logger.py  ros2_radar_filtering.py  ros2_reader.py  ros2_sync_save.py
kiss-icp/src/graph_optimization/: CMakeLists.txt  package.xml
kiss-icp/src/graph_optimization/src/: graph_optimization_node.cpp
kiss-icp/src/kiss_icp_localization/: CMakeLists.txt  package.xml
kiss-icp/src/kiss_icp_localization/launch/: localization.launch.py
kiss-icp/src/kiss_icp_localization/rviz/: localization.rviz  localization.rviz~
kiss-icp/src/kiss_icp_localization/src/: kiss_icp_localization.cpp
kiss-icp/src/pcl_processing_node/: CMakeLists.txt  package.xml
kiss-icp/src/pcl_processing_node/src/: graph_slam_node.cpp  graph_slam_node_pc.cpp
pc_reader/install/: local_setup.sh  setup.sh
pc_reader/install/pointcloud_reader_cpp/lib/pointcloud_reader_cpp/: pointcloud_subscriber
pc_reader/install/pointcloud_reader_cpp/share/ament_index/resource_index/package_run_dependencies/: pointcloud_reader_cpp
pc_reader/install/pointcloud_reader_cpp/share/pointcloud_reader_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
pc_reader/install/pointcloud_reader_cpp/share/pointcloud_reader_cpp/cmake/: pointcloud_reader_cppConfig.cmake
pc_reader/log/: latest_build
pc_reader/src/pointcloud_reader_cpp/: CMakeLists.txt
pc_reader/src/pointcloud_reader_cpp/src/: pointcloud_subscriber.cpp
ros2_reader/: Dockerfile  entrypoint.sh  ros2_reader.py
