<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>graph_optimization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rickesh.t.n@gmail.com">rickeshtn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>g2o</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>Eigen3</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>g2o</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
