<?xml version="1.0"?>
<package format="3">
  <name>kiss_icp_localization</name>
  <version>0.1.0</version>
  <description>ROS 2 node for map-based localization using KISS ICP</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>kiss_icp</depend>
    <build_depend>nav_msgs</build_depend> <!-- Added dependency -->

  <build_export_depend>ament_cmake</build_export_depend>
  <exec_depend>ament_cmake</exec_depend>
   <exec_depend>nav_msgs</exec_depend> <!-- Added dependency -->
   
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
