<?xml version="1.0"?>
<package format="3">
  <name>pcl_graph_slam</name>
  <version>0.1.0</version>
  <description>Graph SLAM with PCL and g2o for radar point clouds</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>Eigen3</depend>
  <depend>nav_msgs</depend>

  <!-- Export dependencies -->
  <build_export_depend>ament_cmake</build_export_depend>
  <exec_depend>ament_cmake</exec_depend>
</package>
