<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_reader_cpp</name>
  <version>0.0.1</version>
  <description>ROS 2 C++ node to subscribe to PointCloud2 topics and process data.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_cmake</exec_depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
